feat: add comments + connect main page with api

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,36 +14,36 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.5.1",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fontsource/lato": "^4.5.10",
-    "@notionhq/client": "^2.2.3",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^9.0.4",
-    "jotai": "^2.0.2",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/lato": "^5.0.18",
+    "@notionhq/client": "^2.2.14",
+    "date-fns": "^3.0.6",
+    "framer-motion": "^10.17.0",
+    "jotai": "^2.6.1",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.3",
-    "@commitlint/config-conventional": "^17.4.3",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "lint-staged": "^13.1.2",
-    "prettier": "^2.8.4",
-    "typescript": "4.9.5",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
     "yarn-upgrade-all": "^0.7.2"
   }
 }
