feat: adding new film

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/lato": "^5.0.18",
     "@notionhq/client": "^2.2.14",
+    "chakra-react-select": "^4.7.6",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.17.0",
     "jotai": "^2.6.1",
